Swapped to correct base url

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
     - name: Publish .NET Core Project
       run: dotnet publish AdventOfCodeBlazor.csproj -c Release -o release --nologo
     
-    # changes the base-tag in index.html from '/' to 'AdventOfCodeBlazor' to match GitHub Pages repository subdirectory
-    - name: Change base-tag in index.html from / to AdventOfCodeBlazor
-      run: sed -i 's/<base href="\/" \/>/<base href="\/AdventOfCodeBlazor\/" \/>/g' release/wwwroot/index.html
+    # changes the base-tag in index.html from '/' to 'AdventOfCode2021' to match GitHub Pages repository subdirectory
+    - name: Change base-tag in index.html from / to AdventOfCode2021
+      run: sed -i 's/<base href="\/" \/>/<base href="\/AdventOfCode2021\/" \/>/g' release/wwwroot/index.html
     
     # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
