--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,13 @@
             "args": [
                 "watch"
             ],
+            "dependsOrder": "sequence",
+            "dependsOn":[ "extract"],
             "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "extract",
+            "command": "extract-blazor-code" 
         },
         {
             "label": "publish",
