--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,28 +3,28 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:20813",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:50454",
+      "sslPort": 44399
     }
   },
   "profiles": {
-    "AdventOfCodeBlazor": {
-      "commandName": "Project",
-      "dotnetRunMessages": false,
-      "launchBrowser": true,
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",     
-      "applicationUrl": "http://localhost:1942",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
+    },
+    "AdventOfCode2021": {
+      "commandName": "Project",
+      "commandLineArgs": "--remote-debugging-port=9222 --user-data-dir=\"C:\\Users\\Manlibear\\AppData\\Local\\Temp\\blazor-edge-debug\" --no-first-run https://localhost:5001/",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
