Solutions 1 and 2 for Day 5

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,10 @@
             "request": "launch",
             "name": "Launch and Debug",
             "browser": "edge",
+            "preLaunchTask": {
+                "task": "extract",
+                "type": "shell"
+            },
             "url": "https://localhost:5001"
         }
     ]
