--- a/AdventOfCodeBlazor.csproj
+++ b/AdventOfCodeBlazor.csproj
@@ -5,6 +5,7 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<DebugType>portable</DebugType>
+		<LangVersion>preview</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
